kustomize/overlays/biosim-rke-frontend-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-dev-ingress
  labels:
    app: frontend-dev-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - biosim-dev.biosimulations.org
      secretName: letsencrypt-biosim-dev-tls
  rules:
    - host: biosim-dev.biosimulations.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
